@@ -14,5 +14,5 @@ on develop => sub {
 };
 
 on test => sub {
-    requires 'Test::More';
+    requires 'Test2::Bundle::More';
 };
